--- a/aistats20.bib
+++ b/aistats20.bib
@@ -20,9 +20,9 @@
 }
 
 @InProceedings{sakaue20a,
-     title =    {Guarantees of Stochastic Greedy Algorithms for Non-monotone Submodular Maximization},
+     title =    {Guarantees of Stochastic Greedy Algorithms for Non-monotone Submodular Maximization with Cardinality Constraint},
      author =   {Shinsaku Sakaue},
-     pages =    {11--21},
+     pages =    {11--21},at
      abstract = {Submodular maximization with a cardinality constraint can model various problems, and those problems are often very large in practice. For the case where objective functions are monotone, many fast approximation algorithms have been developed. The stochastic greedy algorithm (SG) is one such algorithm, which is widely used thanks to its simplicity, efficiency, and high empirical performance. However, its approximation guarantee has been proved only for monotone objective functions. When it comes to non-monotone objective functions, existing approximation algorithms are inefficient relative to the fast algorithms developed for the case of monotone objectives. In this paper, we prove that SG (with slight modification) can achieve almost $1/4$-approximation guarantees in expectation in linear time even if objective functions are non-monotone. Our result provides a constant-factor approximation algorithm with the fewest oracle queries for non-monotone submodular maximization with a cardinality constraint. Experiments validate the performance of (modified) SG.}
 }
 
