--- a/aistats20.bib
+++ b/aistats20.bib
@@ -490,7 +490,7 @@
 
 @InProceedings{cisneros20,
      title =    {Distributionally Robust Formulation and Model Selection for the Graphical Lasso},
-     author =   {Pedro Cisneros and Alexander Petersen and Sang-Yun Oh},
+     author =   {Pedro Cisneros-Velarde and Alexander Petersen and Sang-Yun Oh},
      pages =    {756--765},
      abstract = {Building on a recent framework for distributionally robust optimization, we consider inverse covariance matrix estimation for multivariate data. A novel notion of Wasserstein ambiguity set is provided that is specifically tailored to this problem, leading to a tractable class of regularized estimators. Penalized likelihood estimators for Gaussian data, specifically the graphical lasso estimator, are special cases. Consequently, a direction connection is made between the radius of the Wasserstein ambiguity and the regularization parameter, so that the level of robustness of the estimator is shown to correspond to the level of confidence with which the ambiguity set contains a distribution with the population covariance. A unique feature of the formulation is that the radius can be expressed in closed-form as a function of the ordinary sample covariance matrix. Taking advantage of this finding, a simple algorithm is developed to determine a regularization parameter for graphical lasso, using only the bootstrapped sample covariance matrices, rendering computationally expensive repeated evaluation of the graphical lasso algorithm unnecessary. Alternatively, the distributionally robust formulation can also quantify the robustness of the corresponding estimator if one uses an off-the-shelf method such as cross-validation. Finally, a numerical study is performed to analyze the robustness of the proposed method relative to other automated tuning procedures used in practice.}
 }
