--- a/aistats20.bib
+++ b/aistats20.bib
@@ -1778,7 +1778,7 @@
 
 @InProceedings{pillaud-vivien20,
      title =    {Statistical Estimation of the Poincar\'e constant and Application to Sampling Multimodal Distributions},
-     author =   {Loucas Pillaud-Vivien},
+     author =   {Loucas Pillaud-Vivien and Francis Bach and Tony Lelièvre and Alessandro rudi and Gabriel Stoltz},
      pages =    {2753--2763},
      abstract = {Poincar\'e inequalities are ubiquitous in probability and analysis and have various applications in statistics (concentration of measure, rate of convergence of Markov chains). The Poincar\'e constant, for which the inequality is tight, is related to the typical convergence rate of diffusions to their equilibrium measure. In this paper, we show both theoretically and experimentally that, given sufficiently many samples of a measure, we can estimate its Poincar\'e constant. As a by-product of the estimation of the Poincar\'e constant, we derive an algorithm that captures a low dimensional representation of the data by finding directions which are difficult to sample. These directions are of crucial importance for sampling or in fields like molecular dynamics, where they are called reaction coordinates. Their knowledge can leverage, with a simple conditioning step, computational bottlenecks by using importance sampling techniques.}
 }
@@ -2765,7 +2765,7 @@
 
 @InProceedings{saha20,
      title =    {Best-item Learning in Random Utility Models with Subset Choices},
-     author =   {Aadirupa Saha, Bangalore) and Aditya Gopalan, Bangalore)},
+     author =   {Aadirupa Saha and Aditya Gopalan},
      pages =    {4281--4291},
      abstract = {We consider the problem of PAC learning the most valuable item from a pool of $n$ items using sequential, adaptively chosen plays of subsets of $k$ items, when, upon playing a subset, the learner receives relative feedback sampled according to a general Random Utility Model (RUM) with independent noise perturbations to the latent item utilities. We identify a new property of such a RUM, termed the minimum advantage, that helps in characterizing the complexity of separating pairs of items based on their relative win/loss empirical counts, and can be bounded as a function of the noise distribution alone. We give a learning algorithm for general RUMs, based on pairwise relative counts of items and hierarchical elimination, along with a new PAC sample complexity guarantee of $O(\frac{n}{c^2\epsilon^2} \log \frac{k}{\delta})$ rounds to identify an $\epsilon$-optimal item with confidence $1-\delta$, when the worst case pairwise advantage in the RUM has sensitivity at least $c$ to the parameter gaps of items. Fundamental lower bounds on PAC sample complexity show that this is near-optimal in terms of its dependence on $n,k$ and $c$. }
 }
