--- a/_posts/2020-06-03-peng20a.md
+++ b/_posts/2020-06-03-peng20a.md
@@ -23,12 +23,14 @@ lastpage: 2464
 page: 2455-2464
 order: 2455
 cycles: false
-bibtex_author: Qin, Yue and Peng, Jian and Zhou, Yuan
+bibtex_author: Peng, Jian and Qin, Yue and and Wei, Yadi Zhou, Yuan
 author:
-- given: Yue
-  family: Qin
 - given: Jian
   family: Peng
+- given: Yue
+  family: Qin
+- given: Yadi
+  family: Wei
 - given: Yuan
   family: Zhou
 date: 2020-06-03
