--- a/_posts/2020-06-03-peng20a.md
+++ b/_posts/2020-06-03-peng20a.md
@@ -23,7 +23,7 @@ lastpage: 2464
 page: 2455-2464
 order: 2455
 cycles: false
-bibtex_author: Peng, Jian and Qin, Yue and and Wei, Yadi Zhou, Yuan
+bibtex_author: Peng, Jian and Qin, Yue and Wei, Yadi and Zhou, Yuan
 author:
 - given: Jian
   family: Peng
